Changes in source qmd documents for webpage rendering, added lexces logo.

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,9 @@ R/*.pdf
 # Manuscript and related documentation
 # docs/
 
+# Lexces logo source file 
+LEXCES_LOGO-BASIS_CMYK.jpg
+
 # translation temp files
 po/*~
 
